@@ -1,29 +1,28 @@
 package routing.KDC.NAKT;
 
-import core.DTNHost;
-import core.Message;
+import core.*;
 import routing.CCDTN;
 import routing.KDC.Broker.GetAllBroker;
 import routing.util.TupleDe;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class NAKTBuilder extends KeyManager {
     private Map<DTNHost, TupleDe<String, String>> keyEncryption;
     private Map<DTNHost, List<TupleDe<String, String>>> keyAuthentication;
-
     private final int lcnum;
     Map<DTNHost, Integer> kdcLoad;
-
+    Map<DTNHost, Integer> numberKeyLoad;
+    Map<DTNHost, Integer> numKeyLoadPublisher;
+    private final int bufferThreshold = 10;
     public NAKTBuilder(int lcnum) {
         super(); // Call parent constructor of KeyManager
         this.lcnum = lcnum;
         this.keyEncryption = new HashMap<>();
         this.keyAuthentication = new HashMap<>();
         this.kdcLoad = CCDTN.kdcLoad != null ? CCDTN.kdcLoad : new HashMap<>();
+        this.numberKeyLoad = CCDTN.numberKeyLoad != null ? CCDTN.numberKeyLoad : new HashMap<>();
+        this.numKeyLoadPublisher = CCDTN.numberKeyLoadPublisher !=null ? CCDTN.numberKeyLoadPublisher : new HashMap<>();
     }
 
     /**
@@ -35,9 +34,18 @@ public class NAKTBuilder extends KeyManager {
      * @param msg      get msg
      * @return true if the NAKT key structure is successfully built, false otherwise.
      */
+    /**
+     * Builds the NAKT key structure.
+     * - Generates keys for publishers and subscribers.
+     * - Assigns appropriate encryption keys to topics and attributes.
+     *
+     * @param kdcHosts host is the kdc to process the building
+     * @param msg      get msg
+     * @return true if the NAKT key structure is successfully built, false otherwise.
+     */
     public boolean buildNAKT(List<DTNHost> kdcHosts, Message msg) {
         boolean success = false;
-        int i = 0;
+
         for (DTNHost kdcHost : kdcHosts) {
             if (!kdcHost.isKDC()) continue;
 
@@ -49,14 +57,15 @@ public class NAKTBuilder extends KeyManager {
             if (registerData == null || registerData.isEmpty() || getUnSubs == null || getUnSubs.isEmpty()) {
                 continue;
             }
-            int processCount = 0; // Jumlah proses yang dilakukan oleh KDC ini
+
+
+            int processCount = 0; // Track the number of key derivation & distribution operations
             for (Map.Entry<DTNHost, List<TupleDe<Boolean, Integer>>> entry : registerData.entrySet()) {
                 DTNHost publisher = entry.getKey();
                 List<TupleDe<Boolean, Integer>> subscriberInfo = entry.getValue();
                 if (subscriberInfo == null || subscriberInfo.isEmpty()) continue;
 
-                TupleDe<Boolean, Integer> firstEntry = subscriberInfo.get(0);
-                boolean topicVal = firstEntry.getFirst();
+                boolean topicVal = subscriberInfo.get(0).getFirst();
 
                 for (Map.Entry<DTNHost, List<TupleDe<List<Boolean>, List<TupleDe<Integer, Integer>>>>> entrySubs : getUnSubs.entrySet()) {
                     DTNHost subscriber = entrySubs.getKey();
@@ -66,29 +75,36 @@ public class NAKTBuilder extends KeyManager {
                         List<TupleDe<Integer, Integer>> intPairsList = tuple.getSecond();
 
                         for (TupleDe<Integer, Integer> intPair : intPairsList) {
-                            int firstValue = intPair.getFirst();
                             int secondValue = intPair.getSecond();
 
-                            // Generate encryption keys for publisher if not already present
+                            // 🔹 Ensure publisher only gets a key once
                             if (!keyEncryption.containsKey(publisher)) {
                                 handleEncryption(publisher, topicVal, secondValue, msg);
+                                processCount++;
                             }
-
-                            // Generate authentication keys for subscriber if not already present
+                            // 🔹 Ensure subscriber only gets a key once
                             if (!keyAuthentication.containsKey(subscriber)) {
                                 handleAuthentication(subscriber, topicVal, secondValue, getUnSubs, msg);
+                                processCount++;
+
                             }
-                            processCount++; // Tambah jumlah proses
                         }
                     }
                 }
-                i++;
             }
-            success = true;
-            // i for the number of kdc create NAKT
-            // Simpan data pemrosesan dalam `kdcLoad`
-            kdcLoad.put(kdcHost,processCount);
+
+            // Save load count only if actual processing took place
+            if (processCount > 0) {
+                if (kdcLoad.containsKey(kdcHost)) {
+                    kdcLoad.put(kdcHost, kdcLoad.get(kdcHost) + processCount);
+                } else {
+                    kdcLoad.put(kdcHost, processCount);
+                    numKeyLoadPublisher.put(kdcHost, 0);
+                }
+                success = true;
+            }
         }
+
         return success;
     }
 
@@ -104,59 +120,109 @@ public class NAKTBuilder extends KeyManager {
                 .filter(tuple -> tuple.getFirst().equals(binaryPathPubs))
                 .findFirst()
                 .orElse(null);
-
+        //  **Cek duplikasi sebelum memasukkan key**
         if (selectedKey != null) {
-            keyEncryption.put(publisher, selectedKey);
-            msg.addProperty("KDC_Key_Encryption_", keyEncryption);
-        }
-        List<DTNHost> brokers = getAllBrokers();
-        if (!brokers.isEmpty()) {
-            addMessageToHostsAndForward(msg, brokers);
+            if (!keyEncryption.containsKey(publisher) || !keyEncryption.get(publisher).equals(selectedKey)) {
+                keyEncryption.put(publisher, selectedKey);
+                msg.addProperty("KDC_Key_Encryption_", keyEncryption);
+                addMessageToHostsAndForward(msg);
+            }
         }
     }
+
+
 
     private void handleAuthentication(DTNHost subscriber, boolean topicVal, int secondValue,
                                       Map<DTNHost, List<TupleDe<List<Boolean>, List<TupleDe<Integer, Integer>>>>> getUnSubs,
                                       Message msg) {
-        List<TupleDe<String, String>> derivedKeys = new ArrayList<>();
-        List<TupleDe<Integer, Integer>> existingAttributes = new ArrayList<>();
 
-        // Retrieve existing attributes for subscriber
+        // A set to store derived keys (ensures no duplicates in key list at this stage)
+        Set<TupleDe<String, String>> derivedKeysSet = new HashSet<>();
+
+        // Aggregate existing attributes for this subscriber
+        List<TupleDe<Integer, Integer>> existingAttributes = new ArrayList<>();
         List<TupleDe<List<Boolean>, List<TupleDe<Integer, Integer>>>> unsubData = getUnSubs.get(subscriber);
+
         if (unsubData != null) {
             for (TupleDe<List<Boolean>, List<TupleDe<Integer, Integer>>> unsubEntry : unsubData) {
                 existingAttributes.addAll(unsubEntry.getSecond());
             }
         }
 
+        // Only process if there are existing attributes
         if (!existingAttributes.isEmpty()) {
-            String rootKey = generateRootKey(topicVal);
+            String rootKey = generateRootKey(topicVal); // Generate root encryption key
             List<TupleDe<String, String>> keyList = new ArrayList<>();
             int maxRange = getNearestPowerOfTwo(secondValue) - 1;
 
+            // Generate the list of keys hierarchically using binary paths
             encryptTreeNodes(0, maxRange, rootKey, "", 1, keyList);
 
-            for (TupleDe<Integer, Integer> range : existingAttributes) {
-                for (int i = range.getFirst(); i <= range.getSecond(); i++) {
-                    String binaryPathSubs = Integer.toBinaryString(i);
+            // Determine the needed key for each range in existingAttributes
+            for (TupleDe<Integer, Integer> existingRange : existingAttributes) {
+                for (int i = existingRange.getFirst(); i <= existingRange.getSecond(); i++) {
                     for (TupleDe<String, String> keyTuple : keyList) {
-                        if (binaryPathSubs.startsWith(keyTuple.getFirst()) && !derivedKeys.contains(keyTuple)) {
-                            derivedKeys.add(keyTuple);
+                        TupleDe<Integer, Integer> nodeRange = getRangeFromBinaryPath(keyTuple.getFirst(), maxRange);
+
+                        // Check if 'i' falls within the range of the binary path
+                        if (i >= nodeRange.getFirst() && i <= nodeRange.getSecond()) {
+                            String binaryPath = keyTuple.getFirst();
+                            String binaryI = String.format("%" + lcnum + "s", Integer.toBinaryString(i)).replace(' ', '0');
+
+                            // Add the key if the exact binary path matches
+                            if (binaryI.equals(binaryPath)) {
+                                derivedKeysSet.add(keyTuple);
+                                break; // No need to keep checking other keys for the same value
+                            }
                         }
                     }
                 }
             }
 
+            // Convert the derived keys set to a list (should contain only unique keys at this point)
+            List<TupleDe<String, String>> derivedKeys = new ArrayList<>(derivedKeysSet);
+
+            // Allow only one key to be assigned to the subscriber
+            // This ensures the subscriber only gets one key even if they match multiple ranges.
             if (!derivedKeys.isEmpty()) {
-                keyAuthentication.put(subscriber, derivedKeys);
+                TupleDe<String, String> selectedKey = derivedKeys.get(0); // Pick the first key (or any suitable criterion can be applied)
+
+                // Check if the subscriber already has the key to avoid duplicates
+                if (keyAuthentication.containsKey(subscriber)) {
+                    List<TupleDe<String, String>> existingKeys = keyAuthentication.get(subscriber);
+                    if (existingKeys != null && existingKeys.contains(selectedKey)) {
+                        return; // Subscriber already has the key; exit to avoid redundant processing
+                    }
+                }
+
+                // Update key mappings for the subscriber
+                keyAuthentication.put(subscriber, Collections.singletonList(selectedKey));
+                numberKeyLoad.put(subscriber, 1);
+
+                // Add the key authentication data to the message and forward
                 msg.addProperty("KDC_Key_Authentication_", keyAuthentication);
-            }
-            List<DTNHost> brokers = getAllBrokers();
-            if (!brokers.isEmpty()) {
-                addMessageToHostsAndForward(msg, brokers);
+                addMessageToHostsAndForward(msg);
             }
         }
     }
+
+
+
+    private TupleDe<Integer, Integer> getRangeFromBinaryPath(String path, int maxRange) {
+        int min = 0;
+        int max = maxRange;
+
+        for (char c : path.toCharArray()) {
+            int mid = (min + max) / 2;
+            if (c == '0') {
+                max = mid;
+            } else {
+                min = mid + 1;
+            }
+        }
+        return new TupleDe<>(min, max);
+    }
+
 
 
     /**
@@ -200,7 +266,7 @@ public class NAKTBuilder extends KeyManager {
         if (rightPath.length() == lcnum) keyList.add(new TupleDe<>(rightPath, rightKey));
 
 
-// 🔹 **Logging Debugging**
+//        // 🔹 **Logging Debugging**
 //        System.out.println("🔹 Level " + depth + " (" + binaryPath + ")");
 //        System.out.println("  ├── Left Key (" + leftPath + "): " + leftKey);
 //        System.out.println("  └── Right Key (" + rightPath + "): " + rightKey);
@@ -210,36 +276,53 @@ public class NAKTBuilder extends KeyManager {
         encryptTreeNodes(mid + 1, max, rightKey, rightPath, depth + 1, keyList);
     }
 
+
     /**
      * Sends the message to brokers first, then forwards it to relevant hosts in keyEncryption and keyAuthentication.
      *
      * @param msg     The message to be sent.
-     * @param brokers The list of broker hosts.
      */
-    private void addMessageToHostsAndForward(Message msg, List<DTNHost> brokers) {
+    private void addMessageToHostsAndForward(Message msg) {
         // Send to all brokers first
-        for (DTNHost broker : brokers) {
-            broker.addBufferToHost(msg);
-        }
-
-        // Forward to hosts in keyEncryption (publishers)
-        for (Map.Entry<DTNHost, TupleDe<String, String>> entry : keyEncryption.entrySet()) {
-            entry.getKey().addBufferToHost(msg);
-        }
-
-        // Forward to hosts in keyAuthentication (subscribers)
-        for (Map.Entry<DTNHost, List<TupleDe<String, String>>> entry : keyAuthentication.entrySet()) {
-            entry.getKey().addBufferToHost(msg);
+        for (DTNHost host : SimScenario.getInstance().getHosts()) {
+            for (Connection con : host.getConnections()) {
+                DTNHost other = con.getOtherNode(host);
+                if (other != null && other.isBroker()) {
+                    if (msg.getProperty("KDC_Register_") != null) {
+                        other.addBufferToHost(msg);
+                        publisherForward(msg);
+                    }
+                    if (msg.getProperty("KDC_Subscribe_") != null) {
+                        other.addBufferToHost(msg);
+                    }
+                }
+            }
         }
     }
 
-    /**
-     * Retrieves a list of all available brokers.
-     *
-     * @return A list of DTNHost instances representing brokers.
-     */
-    private List<DTNHost> getAllBrokers() {
-        return new GetAllBroker().getAllBrokers();
+    private void publisherForward(Message msg) {
+        for (DTNHost host : SimScenario.getInstance().getHosts()) {
+            for (Connection con : host.getConnections()) {
+                DTNHost other = con.getOtherNode(host);
+                if (other != null) {
+                    if (msg.getProperty("KDC_Register_") != null && other.isPublisher()) {
+                        Map<DTNHost, TupleDe<String, String>> register =
+                                (Map<DTNHost, TupleDe<String, String>>) msg.getProperty("KDC_Register_");
+                        if (register.containsKey(other)) {
+                            other.addBufferToHost(msg);
+                        }
+                    }
+                    if (msg.getProperty("KDC_Subscribe_") != null) {
+                        Map<DTNHost, List<TupleDe<String, String>>> subscriber =
+                                (Map<DTNHost, List<TupleDe<String, String>>>) msg.getProperty("KDC_Subscribe_");
+                        if (subscriber.containsKey(other)) {
+                            other.addBufferToHost(msg);
+                        }
+                    }
+                }
+            }
+        }
     }
+
 }
 
